[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objects/Object.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Tiles/DropBoxTile.png" type="Texture" id=2]
[ext_resource path="res://Objects/DropBoxObject.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/sfxE04.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/UI/ExclamationMark.svg" type="Texture" id=5]
[ext_resource path="res://Objects/Book.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=2]
resource_name = "Exclaim"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ExclamationMark:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -96 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExclamationMark:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.1, 0.1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Idle", -1, 1.0, false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ExclamationMark:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -100 ), Vector2( 0, -92 ), Vector2( 0, -100 ), Vector2( 0, -92 ), Vector2( 0, -100 ), Vector2( 0, -92 ), Vector2( 0, -100 ), Vector2( 0, -92 ), Vector2( 0, -100 ), Vector2( 0, -92 ), Vector2( 0, -100 ), Vector2( 0, -92 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Stash"

[node name="DropBoxObject" instance=ExtResource( 1 )]
script = ExtResource( 3 )
min_time = 7.0
max_time = 20.0
book_scene = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="." index="0"]
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="." index="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="." index="2"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="3"]
stream = ExtResource( 4 )

[node name="ExclamationMark" type="Sprite" parent="." index="4"]
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
anims/Exclaim = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Stash = SubResource( 4 )
[connection signal="ready" from="Timer" to="." method="_on_Timer_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
